--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,20 +1,21 @@
 server {
     listen 80;
     server_name localhost;
-    
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Handle React routing
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
     }
 
-    # Proxy pass to API Gateway
-    location /api {
-        proxy_pass http://api-gateway-svc:80;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+    # Handle static files
+    location /static {
+        expires 1y;
+        add_header Cache-Control "public";
     }
-} 
+}
