--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Build stage
-FROM node:16-alpine as build
+FROM node:16-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
@@ -8,7 +8,14 @@ RUN npm run build
 
 # Production stage
 FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+# Copy built assets
+COPY --from=builder /app/build /usr/share/nginx/html
+# Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Add healthcheck
+HEALTHCHECK --interval=30s --timeout=3s \
+    CMD wget --quiet --tries=1 --spider http://localhost:80 || exit 1
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"] 
